# darknet_ros

./: .cmake-format.py  .gitignore  .gitmodules
darknet_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
darknet_ros/include/darknet_ros/: darknet_ros.hpp
darknet_ros/launch/: darknet_ros.launch
darknet_ros/libs/: CMakeLists.txt
darknet_ros/libs/DarkHelp/: Version.cmake
darknet_ros/src/: darknet_ros.cc  object_detector_node.cpp  object_detector_nodelet.cpp
