<?xml version="1.0"?>
<package format="2">
  <name>darknet_ros</name>
  <version>1.1.4</version>
  <description>Darknet is an open source neural network framework that runs on CPU and GPU. You only look once (YOLO) is a state-of-the-art, real-time object detection system.</description>
  <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/leggedrobotics/darknet_ros</url>
  <author email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</author>

  <buildtool_depend>catkin</buildtool_depend>

    <!-- Core dependency   -->
  <depend>roscpp</depend>

    <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>message_generation</depend>

    <!-- OpenCV stuff -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

    <!-- Nodelets  -->
  <depend>nodelet</depend>

    <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
  <test_depend>wget</test_depend>

    <!-- Export nodelet plugins -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>  
</package>
